@startuml CSHDDatabase

hide circle
skinparam Linetype ortho

entity Game {
    * id: <<autoincrement>>
    ---
    * name: Text
    * description: Text
    * coverPicture : Text
    * officialPage: Text
    * rating: Number
    * releaseDate: Date


}

entity GameMode {
    * id : <<autoincrement>>
    ---
    * name : Text
}

entity Genre {
    * id: <<autoincrement>>
    ---
    * name: Text
    * description: Text
}

entity Developer {
    * id: <<autoincrement>>
    ---
    * name: Text
    * description: Text
}

entity Platform {
    * id: <<autoincrement>>
    ---
    * name: Text
    * description: Text
    * officialPage: Text
}

entity User {
    * id: <<autoincrement>>
    ---
    * username : Text
    * password : Text
    * aboutMe : Text
    * isAdmin : Boolean
    * profilePicture : Text
}

entity Review {
    * id: <<autoincrement>>
    ---
    * header : Text
    * rating : Number
    * description : Text
}
entity Image {
    * id: <<autoincrement>>
    ---
    * source : Text
    * alt : Text
    * isMain: Boolean
}
Game }o..|| Developer
Game }o..|{ Genre
Game }o..|{ GameMode
Game }o..|{ Platform
Game ||..o{ Review
User ||..o{ Review
Game }o..|{ Image

@enduml
